add removeMember operation
