# band-service/src/main/java/cz/muni/fi/bandmanagementservice/band/data/model/Band.java
@@ -52,6 +52,10 @@ public class Band {
         this.members.add(memberId);
     }
 
+    public void removeMember(Long memberId) {
+        this.members.remove(memberId);
+    }
+
     public Long getManagerId() {
         return managerId;
     }
